# proxchat-tk

./: .dockerignore  .gitignore  BUILD_PREREQUISITES.md  PACKAGE-BUILD-README.md  README.md  build_package.ps1  config.json  convert-to-48khz.ps1  debug 1.lnk  debug 2.lnk  iphlpapi_exports.txt  memorynotes.txt  mmf_reader.py  plan.md  test.ps1  undebug 3.lnk  webrtc_audio_debug_summary.md  win-x64 - Shortcut.lnk
LICENSES/: APACHE-2.0.txt  MPL-2.0.txt
memoryreadingdll/: CMakeLists.txt  GameDataMessage.h  NTK_imports.txt  NamedPipeServer.cpp  NamedPipeServer.h  VERSION.def  ZeroMQPublisher.cpp  ZeroMQPublisher.h  build.ps1  dllmain.cpp  empty.cpp  iphlpapi_exports.txt  make_def.py  make_def_from_dumpbin.py  memoryreadingdll-plan.txt  memreader.cpp  memreader.h  problem_statement.txt  real_exports.txt  version.rc
proxchat-client/: ATTRIBUTIONS.txt  App.xaml  App.xaml.cs  BUILD-README.md  CONFIG-README.md  DISTRIBUTION-README.md  MainWindow.xaml  MainWindow.xaml.cs  ProxChatClient.csproj  README-Channel.md  README_AUDIO_IMPROVEMENTS.md  VolumeTransitionSystem.md  build-deployment.ps1  build.ps1  config-example.json  config.json  config.json.default  debug_output.txt  debug_output2.txt  user_guide.txt
proxchat-client/Controls/: KeyBindingEditor.xaml  KeyBindingEditor.xaml.cs
proxchat-client/Converters/: BooleanToVisibilityConverter.cs  EditButtonContentConverter.cs  InputLevelThresholdColorConverter.cs  InverseBooleanConverter.cs  KeyDisplayConverter.cs  MuteButtonContentConverter.cs
proxchat-client/Models/: Config.cs  SignalingMessages.cs
proxchat-client/Services/: AudioService.cs  ConfigService.cs  DebugLogService.cs  GameDataMessage.cs  GameDataReader.cs  GlobalHotkeyService.cs  MuLawDecoder.cs  NamedPipeGameDataReader.cs  OpusCodecService.cs  SignalingConnectionException.cs  SignalingService.cs  UpdateService.cs  VirtualAudioSource.cs  VolumeTransitionService.cs  WebRtcService.cs  ZeroMQGameDataReader.cs
proxchat-client/ViewModels/: MainViewModel.cs  PeerViewModel.cs  RelayCommand.cs
scans/: mapid.PTR  mapid.PTR.results.0  mapid.PTR.results.1  mapid.PTR.results.2  mapid.PTR.results.4  mapid.PTR.results.5  mapid.PTR.results.6
server/: AWS-deployment-guide.md  Cargo.toml  Dockerfile  PERFORMANCE_ANALYSIS.md  README.md  TOOLS-REQUIRED.md  VPS-DEPLOYMENT-GUIDE.md  build.ps1  extract-binary.ps1  fly.toml
server/src/: main.rs
