[package]
name = "prox-chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = "0.27"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
uuid = { version = "1.17", features = ["v4"] }
